Fix logo alignement (#203)

--- a/docs/stylesheets/extras.css
+++ b/docs/stylesheets/extras.css
@@ -1,6 +1,6 @@
 .md-header-nav__button.md-logo img {
     display: block;
-    height: 50px;
+    height: 46px;
     width: 120px;
 }
 
